testsuite/tests/v1/indexing/non_int_index/test.out
Error: Invalid expression type
   ╭─[ <working-dir>/script.lkql:2:11 ]
   │
 2 │ print(lst["1"])
   │           ─┬─  
   │            ╰─── Expecting a "Int", got a "Str"
───╯
